sumo/tests/duarouter/routes/style1_input/errors/vehicle_false_arrivalspeed/errors.duarouter
Error: Invalid arrivalspeed definition for vehicle '0'
Quitting (on error).
